fix known issues

--- a/plasmac2.html
+++ b/plasmac2.html
@@ -6192,9 +6192,14 @@ This means if these codes are used in the middle of active motion codes, the mot
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_keyboard_jogging">Keyboard Jogging</h3>
-<div class="paragraph"><p>There is a known issue with some combinations of hardware and keyboards that may affect the autorepeat feature of the keyboard
-and will then affect keyboard jogging by intermittent stopping and starting during jogging.
+<div class="paragraph"><p>There is a known issue with some combinations of hardware and keyboards that may affect the autorepeat feature of the keyboard.
+This may affect keyboard jogging by causing intermittent stopping and starting during jogging.
 This issue can be prevented by disabling the Operating System&#8217;s autorepeat feature for the keyboard.</p></div>
+</div>
+<div class="sect2">
+<h3 id="_browser_messages">Browser Messages</h3>
+<div class="paragraph"><p>There is a known issue with the Chrome browser whiche generates the following console message:</p></div>
+<div class="paragraph"><p><code>Missing chrome or resource URL: resource://gre/modules/UpdateListener</code></p></div>
 </div>
 </div>
 </div>
@@ -6211,7 +6216,7 @@ The resulting file which is paced in the users home directory is suitable for at
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2023-05-12 17:44:11 AEST
+ 2023-05-13 09:47:21 AEST
 </div>
 </div>
 </body>
