--- a/plasmac2.html
+++ b/plasmac2.html
@@ -44,23 +44,23 @@ See <a href="#plasmac2:update">Update plasmac2</a> for information on updating p
 <div class="sect1">
 <h2 id="_introduction">Introduction</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>plasmac2 is a GUI extension to AXIS for plasma cutting which utilises the <a href="https://linuxcnc.org/docs/devel/html/man/man9/plasmac.9.html">plasmac component</a> for controlling a plasma table from LinuxCNC master branch (v2.10) or later using the Debian Buster or similar distribution.</p></div>
+<div class="paragraph"><p>plasmac2 is a GUI extension to AXIS for plasma cutting which utilises the <a href="https://linuxcnc.org/docs/devel/html/man/man9/plasmac.9.html">plasmac component</a> for controlling a plasma table from LinuxCNC master branch (v2.10) or later using the Debian Buster and later or any similar Linux distribution.</p></div>
 <div class="paragraph"><p>The plasmac2 GUI supports up to nine axes.</p></div>
 <div class="paragraph"><p>The plasmac2 GUI will run on any hardware that is supported by LinuxCNC master branch (v2.10) or later provided there are enough hardware I/O pins to fulfill the requirements of a plasma configuration.</p></div>
-<div class="paragraph"><p>There are two available formats:</p></div>
+<div class="paragraph"><p>There are two available formats, both with user selectable sizes:</p></div>
 <div class="ulist" id="plasmac2:formats"><ul>
 <li>
 <p>
-landscape with a minimum resolution of 720 x 644
+landscape with a minimum resolution of 798 x 456
 </p>
 </li>
 <li>
 <p>
-portrait with a minimum resolution of 798 x 456
+portrait  with a minimum resolution of 644 x 720
 </p>
 </li>
 </ul></div>
-<div class="paragraph"><p>Minimum resolution is obtained by using a font size of 7, the font size is adjustable from 7 through 20.</p></div>
+<div class="paragraph"><p>Minimum resolution is obtained by using a font size of 7, the font size is selectable from 7 through 20.</p></div>
 <div class="imageblock" style="text-align:center;">
 <div class="content">
 <img src="images/plasmac2_landscape.png" alt="images/plasmac2_landscape.png" width="800" />
@@ -99,6 +99,7 @@ The <a href="http://linuxcnc.org/docs/devel/html/plasma/qtplasmac.html#plasma:in
 </p>
 </li>
 </ul></div>
+<div class="paragraph"><p>Migrating to plasmac2 has no affect on the existing QtPlasmaC configuration, it will remain intact and fully operational.</p></div>
 </div>
 </div>
 <div class="sect1">
@@ -115,9 +116,9 @@ The <a href="http://linuxcnc.org/docs/devel/html/plasma/qtplasmac.html#plasma:in
 <div class="content">
 <pre><code>python3 ~/linuxcnc-dev/configs/sim/axis/plasmac2/plasmac2/migrate.py</code></pre>
 </div></div>
-<div class="paragraph"><p>Click <strong>Migrate</strong> then select the INI file of the config you wish to migrate.</p></div>
-<div class="paragraph"><p>You will then be prompted for the directory name of the new config which by default will be the original QtPlasmaC directory name appended with <em>_plasmac2</em>.</p></div>
-<div class="paragraph"><p>If you change the new directory name to the same as the original QtPlasmaC config then the QtPlasmaC directory name will be appended with <em>_qtplasmac</em>.</p></div>
+<div class="paragraph"><p>Click <strong>Migrate</strong> then select the INI file of the configuration you wish to migrate.</p></div>
+<div class="paragraph"><p>You will then be prompted for the directory name of the new configuration which by default will be the original QtPlasmaC directory name appended with <em>_plasmac2</em> but can be changed to any valid Linux name.</p></div>
+<div class="paragraph"><p>If you change the new directory name to the same as the original QtPlasmaC configuration then the original QtPlasmaC directory name will be appended with <em>_qtplasmac</em>.</p></div>
 <div class="paragraph"><p>It is possible that some HAL commands may be incompatible with plasma2, if this is the case then a notification will be shown listing any incompatibilities.</p></div>
 <div class="sect2">
 <h3 id="_plasmac2_files">plasmac2 Files</h3>
@@ -2345,7 +2346,7 @@ cellspacing="0" cellpadding="4">
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><em>Backup</em></p></td>
-<td align="left" valign="top"><p class="table">Create a compressed backup of the config directory to the users home directory.</p></td>
+<td align="left" valign="top"><p class="table">Create a compressed backup of the configuration directory to the users home directory.</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><em>Close</em></p></td>
@@ -3286,7 +3287,7 @@ Release the <strong>Laser</strong> button.
 <div class="paragraph"><p>It is recommended that the path tolerance is set by placing the appropriate G64 command and P value in the header of each G-code file.</p></div>
 <div class="paragraph"><p>The provided G-code filter program will test for the existence of a <code>G64 Pn</code> command prior to the first motion command.
 If no G64 command is found it will insert a <code>G64 P0.1</code> command which sets the path tolerance to 0.1mm.
-For a imperial config the command will be <code>G64 P0.004</code>.</p></div>
+For a imperial configuration the command will be <code>G64 P0.004</code>.</p></div>
 <div class="listingblock">
 <div class="title">For Metric:</div>
 <div class="content"><!-- Generator: GNU source-highlight 3.1.9
@@ -4251,7 +4252,7 @@ After the <a href="#plasmac2:scribe-parameter">Arm Delay</a> has elapsed, the se
 </p>
 </li>
 </ol></div>
-<div class="paragraph"><p>Save the parameters in the Config tab.</p></div>
+<div class="paragraph"><p>Save the parameters in the Parameters tab.</p></div>
 <div class="paragraph"><p>After the above directions are completed, the scribe may be tested manually by issuing a <code>M3 $1 S1</code> command in the MDI input. The user may find it helpful to use this method to scribe a small divot and then try to pulse the torch in the same location to align the offsets between the scribe and the torch.</p></div>
 <div class="paragraph"><p>To use the scribe from G-code:</p></div>
 <div class="listingblock">
@@ -4684,7 +4685,7 @@ Manually edit the INI and/or the HAL file of the configuration.
 <h3 id="_custom_python_code">Custom Python Code</h3>
 <div class="paragraph"><p>It is possible to add custom Python code to change some existing functions or to add new ones.
 It is also possible to add custom HAL pins to the HAL component <code>axisui</code> that can be manipulated by the custom python code.</p></div>
-<div class="paragraph"><p>Custom python code can be added in to two different files that are provided in the config directory and custom HAL pins can be created in one file provided in the config directory.</p></div>
+<div class="paragraph"><p>Custom python code can be added in to two different files that are provided in the configuration directory and custom HAL pins can be created in one file provided in the configuration directory.</p></div>
 <div class="paragraph"><p>All of these files have simple examples that have been commented so they do not execute.</p></div>
 <div class="tableblock">
 <table rules="all"
@@ -6217,7 +6218,7 @@ The resulting file which is paced in the users home directory is suitable for at
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2023-08-18 18:05:58 AEST
+ 2023-08-20 16:00:53 AEST
 </div>
 </div>
 </body>
