--- a/plasmac2.html
+++ b/plasmac2.html
@@ -3631,6 +3631,7 @@ The <code>plasmac.ohmic-probe</code> input pin is used to detect the material an
 <div class="paragraph"><p>The probe could be a mechanically deployed probe, a permanently mounted proximity sensor or even simply a stiff piece of wire extending about 0.5mm (0.2") below the torch tip.
 If the probe is mechanically deployed then it needs to extend/retract rather quickly to avoid excessive probing times and would commonly be pneumatically operated.</p></div>
 <div class="paragraph"><p>To use this feature, the user must set the probe&#8217;s offset from the torch center by following the procedure described in <a href="#plasmac2:peripheral-offsets">Peripheral Offsets</a>.</p></div>
+<div class="paragraph"><p>If <code>Offset Probing</code> is valid then the feed rate at which the X and Y axes move to the offset position may be adjusted by the use of the <code>Offset Speed</code> parameter in the Probing frame of the <a href="#plasmac2:parameters-page">Parameters Page</a>.</p></div>
 <div class="paragraph"><p>To modify the offsets manually, the user could edit either or both the following lines in the <code>[OFFSET_PROBING]</code> section of the <em>&lt;machine_name&gt;</em>.prefs file:</p></div>
 <div class="listingblock">
 <div class="content"><!-- Generator: GNU source-highlight 3.1.9
@@ -3642,11 +3643,10 @@ http://www.gnu.org/software/src-highlite -->
 <span style="font-weight: bold"><span style="color: #0000FF">Delay </span></span><span style="font-weight: bold"><span style="color: #000000">=</span></span><span style="color: #009900"> t.t</span></tt></pre></div></div>
 <div class="paragraph"><p>where <code>n.n</code> is the offset of the probe from the torch center in machine units for the X and Y axes and <code>t.t</code> is the time in seconds to allow for any mechanical deployment of the probe if required.</p></div>
 <div class="paragraph"><p>Each of these parameters is optional and also may appear in any order. If a parameter is not detected then the default is 0.0. There can be no space after the X or Z, lower case is permissible.</p></div>
-<div class="paragraph"><p>When this variable appears in the INI file with either X or Y not equal to zero then plasmac2 will do all <code>Ohmic Probing</code> as <code>Offset Probing</code>.
-If Offset Probing is valid then the feed rate at which the X and Y axes move to the offset position may be adjusted by the use of the <code>Offset Speed</code> parameter in the PROBING frame of the <a href="#plasmac2:parameters-page">PARAMETERS Page</a>.</p></div>
+<div class="paragraph"><p>When this variable appears in the INI file with either X or Y not equal to zero then plasmac2 will do all <code>Ohmic Probing</code> as <code>Offset Probing</code>.</p></div>
 <div class="paragraph"><p>When a probe sequence has begun, the <code>plasmac.ohmic-enable</code> pin will be set True causing the probe to extend. When the material is detected the <code>plasmac.ohmic-enable</code> pin will be reset to false causing the probe to retract.</p></div>
-<div class="paragraph"><p>The probe will begin moving to the offset position simultaneously with the Z axis moving down to the <code>Probe Height</code>, probing will not commence unless the deployment timer has completed.
-It is required that the <code>Probe Height</code> in the Probing frame of the <a href="#plasmac2:parameters-page">Parameters Page</a> is above the top of the material to ensure that the probe is fully offset to the correct X/Y position before the final vertical probe down movement.</p></div>
+<div class="paragraph"><p>The probe will begin moving to the offset position simultaneously with the Z axis moving down to the <code>Probe Height</code>, probing will not commence unless the deployment timer has completed.</p></div>
+<div class="paragraph"><p>It is required that the <code>Probe Height</code> in the Probing frame of the <a href="#plasmac2:parameters-page">Parameters Page</a> is above the top of the material to ensure that the probe is fully offset to the correct X/Y position before the final vertical probe down movement.</p></div>
 <div class="admonitionblock">
 <table><tr>
 <td class="icon">
@@ -6223,7 +6223,7 @@ The resulting file which is paced in the users home directory is suitable for at
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2023-10-23 16:37:32 AEDT
+ 2023-10-28 13:54:15 AEDT
 </div>
 </div>
 </body>
